appId: com.lkurczab.gcpacetrainer
---
- tapOn:
    id: "main-tab-bar-home"
- tapOn: "Change track"
- tapOn:
    id: "patternly:home:select-track:cloud-certification"
- assertVisible: "Cloud Certification"
- tapOn: "Practice"
- assertVisible:
    id: "patternly:practice:mode-card:cloud-practice"
- assertVisible:
    id: "patternly:practice:mode-card:cloud-review"
- assertVisible:
    id: "patternly:practice:mode-card:cloud-exam-simulation"
